# OneIDP

./: .gitignore
backend/: README.md  config.py  main.py  pyproject.toml
backend/bot/: __init__.py  handlers.py  websocket.py
backend/database/: __init__.py  crud.py  models.py  session.py
backend/oauth/: __init__.py  client.py  provider.py
backend/page/: __init__.py  oauth_routes.py  routes.py
backend/utils/: __init__.py  security.py
